Correction des fonctions et tests après supression de username
