# schemas/User.js
@@ -21,18 +21,12 @@ var UserSchema = mongoose.Schema({
     unique: true,
     required: true    
   },
-  username: {
-    type: String,
-    index: true,
-    unique: true,
-    required: true
-  },
   password: {
     type: String,
     required: true
   },
   phone_number: {
-    type: Number,
+    type: String,
     required: true
   },
   role: {
