# swagger.json
@@ -21,7 +21,7 @@
             "schemas": {
                 "User": {
                     "type": "object",
-                    "required": ["firstname", "lastname", "username", "email", "phone_number", "password"],
+                    "required": ["firstname", "lastname", "email", "phone_number", "password"],
                     "properties": {
                         "firstname": {
                             "type": "string",
@@ -33,17 +33,12 @@
                             "description": "The user's last name",
                             "example": "Doe"
                         },
-                        "username": {
-                            "type": "string",
-                            "description": "The user's username",
-                            "example": "johndoe"
-                        },
                         "email": {
                             "type": "string",
                             "description": "The user's email",
                             "example": "johndoe@example.com"
                         },
-                        "phone": {
+                        "phone_number": {
                             "type": "string",
                             "description": "The user's phone number",
                             "example": "+1234567890"
@@ -62,17 +57,17 @@
                 },
                 "Login": {
                     "type": "object",
-                    "required": ["username", "password"],
+                    "required": ["email", "password"],
                     "properties": {
-                        "username": {
+                        "email": {
                             "type": "string",
                             "description": "The user's username",
-                            "example": "johndoe"
+                            "example": "testeur@test.fr"
                         },
                         "password": {
                             "type": "string",
                             "description": "The user's password",
-                            "example": "secret"
+                            "example": "secretpassword"
                         }
                     }
                 }
